[package]
name = "rust-gallery-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
exif = { package = "kamadak-exif", version = "0.6.1" }
image = "0.25.8"
serde = "1.0.228"
tokio = "1.48.0"
tower-http = { version = "0.6.6", features = ["trace", "fs", "cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
